// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImportChannelForm renders component 1`] = `
<WithStyles(ForwardRef(Grid))
  className="content-mock"
  container={true}
>
  <WithStyles(ForwardRef(Typography))
    className="subfieldTitle-mock"
    variant="subtitle1"
  >
    Channel URI
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(Grid))
    container={true}
    direction="row"
    item={true}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={true}
    >
      <WithStyles(ForwardRef(TextField))
        fullWidth={true}
        id="channel-uri"
        margin="none"
        onChange={[Function]}
        placeholder="zbay//channel/..."
        value=""
        variant="outlined"
      />
    </WithStyles(ForwardRef(Grid))>
    <Memo(WithStyles(ProgressFab))
      className="fab-mock"
      disabled={false}
      label="Unlock"
      loading={false}
      onClick={[Function]}
      success={false}
    >
      <VpnKeyIcon />
    </Memo(WithStyles(ProgressFab))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`ImportChannelForm renders decoded 1`] = `""`;

exports[`ImportChannelForm renders decoding 1`] = `
<WithStyles(ForwardRef(Grid))
  className="content-mock"
  container={true}
>
  <WithStyles(ForwardRef(Typography))
    className="subfieldTitle-mock"
    variant="subtitle1"
  >
    Channel URI
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(Grid))
    container={true}
    direction="row"
    item={true}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={true}
    >
      <WithStyles(ForwardRef(TextField))
        fullWidth={true}
        id="channel-uri"
        margin="none"
        onChange={[Function]}
        placeholder="zbay//channel/..."
        value=""
        variant="outlined"
      />
    </WithStyles(ForwardRef(Grid))>
    <Memo(WithStyles(ProgressFab))
      className="fab-mock"
      disabled={false}
      label="Unlock"
      loading={true}
      onClick={[Function]}
      success={false}
    >
      <VpnKeyIcon />
    </Memo(WithStyles(ProgressFab))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;
